--- a/index.html
+++ b/index.html
@@ -15,17 +15,46 @@
 <div>
     <h1>It is palindrome?</h1>
 
-    <form action="" method="get">
+    <form action="" method="get" id="palindrome-form">
         <input type="text" name="" id="input-word">
         <button>To check!</button>
-        <div>
-            <p>Yes, it is palidrome.</p>
-        </div>
     </form>
+    <div id="results">
+        <!-- <p>Yes, it is palidrome.</p> -->
+    </div>
 </div>
+
+<hr>
 
 <div>
     <h1>Even and Odd</h1>
+
+    <form action="" method="get" id="even-form">
+
+        <label for="" id="userValue">Chose your value:</label>
+        <select name="" id="">
+            <option value=""></option>
+            <option value="evenOption">Even</option>
+            <option value="oddOption">Odd</option>
+        </select>
+
+        <label for="" id="userNumbers">Chose your number:</label>
+        <select>
+            <option value=""></option>
+            <option value="nOne">1</option>
+            <option value="nTwo">2</option>
+            <option value="nThree">3</option>
+            <option value="nFour">4</option>
+            <option value="nFive">5</option>
+        </select>
+
+        <button>Roll</button>
+
+    </form>
+
+    <div id="resultsOfBattle">
+
+    </div>
 
 </div>
 
