--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
 
     <form action="" method="get" id="even-form">
 
-        <label for="" id="userValue">Chose your value:</label>
-        <select name="" id="">
+        <label for="" >Chose your value:</label>
+        <select name="" id="userValue">
             <option value=""></option>
-            <option value="evenOption">Even</option>
-            <option value="oddOption">Odd</option>
+            <option value="even">Even</option>
+            <option value="odd">Odd</option>
         </select>
 
-        <label for="" id="userNumbers">Chose your number:</label>
-        <select>
+        <label for="">Chose your number:</label>
+        <select name="userNumers" id="userNumbers">
             <option value=""></option>
-            <option value="nOne">1</option>
-            <option value="nTwo">2</option>
-            <option value="nThree">3</option>
-            <option value="nFour">4</option>
-            <option value="nFive">5</option>
+            <option id="one" value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
         </select>
 
         <button>Roll</button>
